--- a/SiteMaps/index.qmd
+++ b/SiteMaps/index.qmd
@@ -1,7 +1,9 @@
 ---
-title: "SiteMaps"
+title: "PaleoAnth SiteMaps"
 ---
 
-This is a Quarto website.
+## About
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This repository and website serve as a means to share, create, and visualize spatiotemporal information related to hominin sites in the middle and late Pleistocene. The information below includes both an interactive map and a dynamic table. Tables and maps are able to be exported into a word processor for manuscript development. 
+
+## Map of Mid- to Late-Pleistocene hominin sites
