--- a/references.bib
+++ b/references.bib
@@ -40,3 +40,53 @@
 	author = {Toro-Moyano, Isidro and de Lumley, Henry and Fajardo, Beatriz and Barsky, Déborah and Et., Al},
 	year = {2009},
 }
+
+@article{toro-moyano_oldest_2013,
+	title = {The oldest human fossil in {Europe}, from {Orce} ({Spain})},
+	url = {https://sci-hub.ru/10.1016/j.jhevol.2013.01.012},
+	doi = {10.1016/j.jhevol.2013.01.012},
+	urldate = {2026-02-06},
+	journal = {Journal of Human Evolution},
+	author = {Toro-Moyano, Isidro and Martínez-Navarro, Bienvenido and Agustí, Jordi and Souday, Caroline and Et., Al},
+	year = {2013},
+}
+
+@article{pares_matuyama-age_2006,
+	title = {Matuyama-age lithic tools from the {Sima} del {Elefante} site, {Atapuerca} (northern {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.jhevol.2005.08.011},
+	doi = {10.1016/j.jhevol.2005.08.011},
+	urldate = {2026-02-06},
+	journal = {Journal of Human Evolution},
+	author = {Parés, Josep M. and Pérez-González, Alfredo and Rosas, Antonio and Benito, A. and Et., Al},
+	year = {2006},
+}
+
+@article{carbonell_first_2008,
+	title = {The first hominin of {Europe}},
+	url = {https://sci-hub.ru/10.1038/nature06815},
+	doi = {10.1038/nature06815},
+	urldate = {2026-02-06},
+	journal = {Nature},
+	author = {Carbonell, Eudald and Bermúdez de Castro, José M. and Parés, Josep M. and Pérez-González, Alfredo and Et., Al},
+	year = {2008},
+}
+
+@article{rodriguez_one_2011,
+	title = {One million years of cultural evolution in a stable environment at {Atapuerca} ({Burgos}, {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.quascirev.2010.02.021},
+	doi = {10.1016/j.quascirev.2010.02.021},
+	urldate = {2026-02-06},
+	journal = {Quaternary Science Reviews},
+	author = {Rodríguez, J. and Burjachs, F. and Cuenca-Bescós, G. and García, N. and Et., Al},
+	year = {2011},
+}
+
+@article{olle_early_2013,
+	title = {The {Early} and {Middle} {Pleistocene} technological record from {Sierra} de {Atapuerca} ({Burgos}, {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.quaint.2011.11.009},
+	doi = {10.1016/j.quaint.2011.11.009},
+	urldate = {2026-02-06},
+	journal = {Quaternary International},
+	author = {Ollé, Andreu and Mosquera, Marina and Rodríguez, Xosé Pedro and de Lombera-Hermida, Arturo and Et., Al},
+	year = {2013},
+}
