--- a/references.bib
+++ b/references.bib
@@ -90,3 +90,31 @@
 	author = {Ollé, Andreu and Mosquera, Marina and Rodríguez, Xosé Pedro and de Lombera-Hermida, Arturo and Et., Al},
 	year = {2013},
 }
+
+@article{gibert_magnetostratigraphic_2024,
+	title = {Magnetostratigraphic dating of earliest hominin sites in {Europe}},
+	volume = {256},
+	issn = {0012-8252},
+	url = {https://www.sciencedirect.com/science/article/pii/S001282522400182X},
+	doi = {10.1016/j.earscirev.2024.104855},
+	abstract = {After a century of research, the chronology of the first arrival of hominins in Europe remains controversial. Four Spanish localities potentially record evidence of the oldest Europeans, yet arrival ages remain loosely constrained between 1.6 and 0.9 Ma. Here we provide a new Early Pleistocene magnetostratigraphy, recording four paleomagnetic boundaries within 80 m of a fluvio-lacustrine sedimentary succession in Orce, southeastern Spain. This Pleistocene succession incorporates for the first time in Europe five superposed paleontological localities between the Olduvai and Jaramillo magnetozones, including three hominin sites providing evidence of the presence of hominins older than 1.07 Ma in Europe. The specific age for each fossil quarry is estimated using a Bayesian age-stratigraphic model with 95\% confidence intervals. The oldest sites, which lack evidence of hominin activity, are 1.60 ± 0.05 Ma and 1.35 ± 0.07 Ma, respectively. Three sites higher in the stratigraphy, which contain evidence of hominids, occur at 1.32 ± 0.07 Ma (Venta Micena), 1.28 ± 0.07 Ma (Barranco León-5), and 1.23 ± 0.06 Ma (Fuente Nueva-3). The magnetostratigraphy and paleontological content of the Orce hominin sites are compared with other European localities concluding that the new chronology for Orce represents Europe's oldest and most accurately dated early Pleistocene hominin records. These results indicate that African hominins with Oldowan technology reached Southwestern Europe {\textgreater}0.5 Ma after first leaving Africa. This diachronism is explained because Europe was limited by biogeographical barriers that hominins were able to surpass only in a later evolutionary/cultural stage. We propose that ∼1,3 Ma hominins first arrived in southern Europe by traversing the Strait of Gibraltar when in a similar time frame, crossed the Wallace Line and reached the island of Flores (Java) by navigating the wider Lombok Strait. Archaeological data shows that a second wave of hominins with Acheulian technology entered South Europe again via the Iberian Peninsula after the Jaramillo subchron (1.071–0.991 Ma) and before the Brunhes chron (0.77 Ma).},
+	urldate = {2026-02-06},
+	journal = {Earth-Science Reviews},
+	author = {Gibert, Luis and Scott, Gary and Deino, Alan and Martin, Robert},
+	month = sep,
+	year = {2024},
+	keywords = {Dispersion routes, Early hominins, Jaramillo, Magnetostratigraphy, Oldowan, Olduvai, Orce},
+	pages = {104855},
+	file = {ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\27ESVR8T\\S001282522400182X.html:text/html},
+}
+
+@article{muttoni_early_2017,
+	title = {An early {Brunhes} ({\textless}0.78 {Ma}) age for the {Lower} {Paleolithic} tool-bearing {Kozarnika} cave sediments, {Bulgaria}},
+	url = {https://sci-hub.ru/10.1016/j.quascirev.2017.10.034},
+	doi = {10.1016/j.quascirev.2017.10.034},
+	urldate = {2026-02-06},
+	journal = {Quaternary Science Reviews},
+	author = {Muttoni, Giovanni and Sirakov, Nikolas and Guadelli, Jean-Luc and Kent, Dennis V. and Et., Al},
+	year = {2017},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\6D2S6FRC\\Muttoni et al. - 2017 - An early Brunhes (0.78 Ma) age for the Lower Pale.pdf:application/pdf},
+}
