--- a/references.bib
+++ b/references.bib
@@ -118,3 +118,142 @@
 	year = {2017},
 	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\6D2S6FRC\\Muttoni et al. - 2017 - An early Brunhes (0.78 Ma) age for the Lower Pale.pdf:application/pdf},
 }
+
+@article{oms_early_2000,
+	title = {Early human occupation of {Western} {Europe}: {Paleomagnetic} dates for two paleolithic sites in {Spain}},
+	shorttitle = {Early human occupation of {Western} {Europe}},
+	url = {https://sci-hub.ru/10.1073/pnas.180319797},
+	doi = {10.1073/pnas.180319797},
+	urldate = {2026-02-09},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Oms, O. and Parés, J. M. and Martínez-Navarro, B. and Agustí, J. and Et., Al},
+	year = {2000},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\UWI9IZRA\\Oms et al. - 2000 - Early human occupation of Western Europe Paleomag.pdf:application/pdf},
+}
+
+@article{duval_revisiting_2015,
+	title = {Revisiting the {ESR} chronology of the {Early} {Pleistocene} hominin occupation at {Vallparadís} ({Barcelona}, {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.quaint.2014.08.054},
+	doi = {10.1016/j.quaint.2014.08.054},
+	urldate = {2026-02-09},
+	journal = {Quaternary International},
+	author = {Duval, Mathieu and Bahain, Jean-Jacques and Falguères, Christophe and Garcia, Joan and Et., Al},
+	year = {2015},
+}
+
+@incollection{martinez_mode_2014,
+	title = {The {Mode} 1 lithic industry of {Vallparadís} ({Terrassa}, {Catalonia})},
+	isbn = {978-84-92681-87-7 978-84-92681-88-4},
+	abstract = {The Vallparadís site contains a long archaeological sequence dating to between the late Early Pleistocene and the first half of the Middle Pleisto-cene. Levels 10 and 10c (unit EVT7) have yielded abundant macrofauna and Mode 1 stone tools calibrated by paleomagnetism and by biostratigraphy to the upper limit of the Jaramillo subchron (0.98 Ma) and by ESR/U–series to 0.83 ± 0.13 Ma. The industries, elaborated from local raw materials, are small in size. The chaînes opératoires used for lithic production are poorly elaborated and are based on a bipolar on an anvil knapping technique. Retouched tools include notches, becs, scrapers and denticu-lates on small pebbles, clasts, fragments and flakes as well as a large single chopper. Based on the tech-no-typological comparison with other known Early Pleistocene sites in Europe, it has been proposed that these sites share a single technology with a variability range. Successive migratory episodes with biological and cultural exchange and independent evolution during the Early Pleistocene would imply the possibility of the development of regional technological traditions in Europe.},
+	booktitle = {Pleistocene and {Holocene} {Hunters}-{Gatherers} in {Iberia} and the {Gibraltar} {Strait}: the {Current} {Archaeological} {Record}},
+	publisher = {Universidad de Burgos/Fundacion Atapuerca, Burgos},
+	author = {Martínez, Kenneth and Garcia Garriga, Joan},
+	month = jan,
+	year = {2014},
+	pages = {308--315},
+	file = {Full Text PDF:C\:\\Users\\danny\\Zotero\\storage\\ZJJW3MEN\\Martínez and Garcia Garriga - 2014 - The Mode 1 lithic industry of Vallparadís (Terrass.pdf:application/pdf},
+}
+
+@article{mosquera_shedding_2018,
+	title = {Shedding light on the {Early} {Pleistocene} of {TD6} ({Gran} {Dolina}, {Atapuerca}, {Spain}): {The} technological sequence and occupational inferences},
+	volume = {13},
+	issn = {1932-6203},
+	shorttitle = {Shedding light on the {Early} {Pleistocene} of {TD6} ({Gran} {Dolina}, {Atapuerca}, {Spain})},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0190889},
+	doi = {10.1371/journal.pone.0190889},
+	abstract = {This paper aims to update the information available on the lithic assemblage from the entire sequence of TD6 now that the most recent excavations have been completed, and to explore possible changes in both occupational patterns and technological strategies evidenced in the unit. This is the first study to analyse the entire TD6 sequence, including subunits TD6.3 and TD6.1, which have never been studied, along with the better-known TD6.2 Homo antecessor-bearing subunit. We also present an analysis of several lithic refits found in TD6, as well as certain technical features that may help characterise the hominin occupations. The archaeo-palaeontological record from TD6 consists of 9,452 faunal remains, 443 coprolites, 1,046 lithic pieces, 170 hominin remains and 91 Celtis seeds. The characteristics of this record seem to indicate two main stages of occupation. In the oldest subunit, TD6.3, the lithic assemblage points to the light and limited hominin occupation of the cave, which does, however, grow over the course of the level. In contrast, the lithic assemblages from TD6.2 and TD6.1 are rich and varied, which may reflect Gran Dolina cave’s establishment as a landmark in the region. Despite the occupational differences between the lowermost subunit and the rest of the deposit, technologically the TD6 lithic assemblage is extremely homogeneous throughout. In addition, the composition and spatial distribution of the 12 groups of lithic refits found in unit TD6, as well as the in situ nature of the assemblage demonstrate the high degree of preservation at the site. This may help clarify the nature of the Early Pleistocene hominin occupations of TD6, and raise reasonable doubt about the latest interpretations that support the ex situ character of the assemblage as a whole.},
+	language = {en},
+	number = {1},
+	urldate = {2026-02-09},
+	journal = {PLOS ONE},
+	author = {Mosquera, Marina and Ollé, Andreu and Rodríguez-Álvarez, Xose Pedro and Carbonell, Eudald},
+	month = jan,
+	year = {2018},
+	note = {Publisher: Public Library of Science},
+	keywords = {Archaeological excavation, Archaeology, Cretaceous period, Hominins, Limestone, Lithic technology, Paleoanthropology, Raw materials},
+	pages = {e0190889},
+	file = {Full Text PDF:C\:\\Users\\danny\\Zotero\\storage\\QD5GS44U\\Mosquera et al. - 2018 - Shedding light on the Early Pleistocene of TD6 (Gr.pdf:application/pdf},
+}
+
+@article{pares_reassessing_2013,
+	title = {Reassessing the age of {Atapuerca}-{TD6} ({Spain}): new paleomagnetic results},
+	shorttitle = {Reassessing the age of {Atapuerca}-{TD6} ({Spain})},
+	url = {https://sci-hub.ru/10.1016/j.jas.2013.06.013},
+	doi = {10.1016/j.jas.2013.06.013},
+	urldate = {2026-02-09},
+	journal = {Journal of Archaeological Science},
+	author = {Parés, J. M. and Arnold, L. and Duval, M. and Demuro, M. and Et., Al},
+	year = {2013},
+	file = {Accepted Version:C\:\\Users\\danny\\Zotero\\storage\\PAXCG2VU\\Parés et al. - 2013 - Reassessing the age of Atapuerca-TD6 (Spain) new .pdf:application/pdf},
+}
+
+@article{cuenca-bescos_biostratigraphic_2007,
+	title = {Biostratigraphic succession of the {Early} and {Middle} {Pleistocene} mammal faunas of the {Atapuerca} cave sites ({Burgos}, {Spain})},
+	volume = {259},
+	abstract = {Biostra tigra phic succession of th e Early and Middle Pleistoccnc mammal faun as ofth e Ata pu el'ca cave sites (B urgos, Spain) With 4 figs Gloria CUENCA-BESC6s \& Nuria G AKCiA Abs t r:lc{\textbackslash} The At3pu{\textasciitilde}rc3 C:l{\textbackslash}{\textasciitilde} 1000:l1il;{\textasciitilde}S \{\vphantom{\}}GrJn Doliua -TD. Trinchcr.l Galeri{\textasciitilde} -TG. Trill{\textasciitilde}hcm flef.1ntc -TE. Sim3 de los Huc;;os -SH) rcprcS{\textless}.'nt onc ofthc beSI records Of lhc Europe,1n Plcistoccnc f.1un'l. nlc siles are located in long and str;lIigrJphically "ell·documented S{\textless}:{\textbackslash};lions. ranging from the Early to lhe I{\textbackslash} l iddle PleiSlocenc. They yielded ,In imprcssh e amount of fossils but also of lilhi{\textasciitilde} industries. "Iuch provide an insight ;nto Man's earliest records and acti, ities 111 Westwl Europe Icannibalism. earliest burial. food pro..:cssing). The SlrJtigrJphic distribution ofthl' Alapul:rca n1ll11unals rc"eals 6 difli.·renl local faunal assembkLg{\textasciitilde}"S. "hkh arc here dl'Signated the At:.pucrca 1:llIn the best collection},
+	journal = {CFS Courier Forschungsinstitut Senckenberg},
+	author = {Cuenca-Bescós, Gloria and Garcia, Nuria},
+	month = dec,
+	year = {2007},
+	pages = {99--110},
+	file = {Full Text PDF:C\:\\Users\\danny\\Zotero\\storage\\YHT6A6QM\\Cuenca-Bescós and Garcia - 2007 - Biostratigraphic succession of the Early and Middl.pdf:application/pdf},
+}
+
+@article{de_lombera-hermida_lithic_2016,
+	title = {The lithic assemblage from {Pont}-de-{Lavaud} ({Indre}, {France}) and the role of the bipolar-on-anvil technique in the {Lower} and {Early} {Middle} {Pleistocene} technology},
+	url = {https://sci-hub.ru/10.1016/j.jaa.2015.12.002},
+	doi = {10.1016/j.jaa.2015.12.002},
+	urldate = {2026-02-09},
+	journal = {Journal of Anthropological Archaeology},
+	author = {de Lombera-Hermida, Arturo and Rodríguez-Álvarez, Xose Pedro and Peña, Luna and Sala-Ramos, Robert and Et., Al},
+	year = {2016},
+}
+
+@article{despriee_earliest_2024,
+	title = {Earliest evidence of human occupations and technological complexity above the 45th {North} parallel in {Western} {Europe}. {The} site of {Lunery}-{Rosieres} la-{Terre}-des-{Sablons} ({France}, 1.1 {Ma})},
+	volume = {14},
+	copyright = {2024 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-024-66980-4},
+	doi = {10.1038/s41598-024-66980-4},
+	abstract = {The site of LuneryRosieres la-Terre-des-Sablons (Lunery, Cher, France) comprises early evidence of human occupation in mid-latitudes in Western Europe. It demonstrates hominin presence in the Loire River Basin during the Early Pleistocene at the transition between an interglacial stage and the beginning of the following glacial stage. Three archaeological levels sandwiched and associated with two diamicton levels deposited on the downcutting river floor indicate repeated temporary occupations. Lithic material yields evidence of simple and more complex core technologies on local Jurassic siliceous rocks and Oligocene millstone. Hominins availed of natural stone morphologies to produce flakes with limited preparation. Some cores show centripetal management and a partially prepared striking platform. The mean ESR age of 1175 ka ± 98 ka obtained on fluvial sediments overlying the archaeological levels could correspond to the transition between marine isotopic stages (MIS) 37 and 36, during the normal Cobb Mountain subchron, and in particular at the beginning of MIS 36. The Lunery site shows that hominins were capable of adapting to early glacial environmental conditions and adopting appropriate strategies for settling in mid-latitude zones. These areas cannot be considered as inhospitable at that time as Lunery lies at some distance from the forming ice cap.},
+	language = {en},
+	number = {1},
+	urldate = {2026-02-09},
+	journal = {Scientific Reports},
+	author = {Despriée, Jackie and Moncel, Marie-Hélène and Courcimault, Gilles and Voinchet, Pierre and Jouanneau, Jean-Claude and Bahain, Jean-Jacques},
+	month = jul,
+	year = {2024},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Climate sciences, Ecology, Environmental sciences, Evolution, Solid Earth sciences},
+	pages = {16894},
+	file = {Full Text PDF:C\:\\Users\\danny\\Zotero\\storage\\TUN6JP3G\\Despriée et al. - 2024 - Earliest evidence of human occupations and technol.pdf:application/pdf},
+}
+
+@article{cauche_vallonnet_2022,
+	title = {The {Vallonnet} cave on the northern {Mediterranean} border: {A} record of one of the oldest human presences in {Europe}},
+	shorttitle = {The {Vallonnet} cave on the northern {Mediterranean} border},
+	url = {https://sci-hub.ru/10.1016/j.anthro.2021.102974},
+	doi = {10.1016/j.anthro.2021.102974},
+	urldate = {2026-02-09},
+	journal = {L'Anthropologie},
+	author = {Cauche, Dominique},
+	year = {2022},
+}
+
+@article{despriee_lower_2010,
+	series = {Oldest {Human} {Expansions} in {Eurasia}: {Favouring} and {Limiting} {Factors}},
+	title = {Lower and middle {Pleistocene} human settlements in the {Middle} {Loire} {River} {Basin}, {Centre} {Region}, {France}},
+	volume = {223-224},
+	issn = {1040-6182},
+	url = {https://www.sciencedirect.com/science/article/pii/S1040618209002365},
+	doi = {10.1016/j.quaint.2009.07.019},
+	abstract = {Evidence of earliest human settlements observed in the alluvial formations of the Middle Loire Basin during systematic surveys organised since 1981. Many stepped fluvial terraces deposited during the successive interglacial–glacial Quaternary cycles have been identified in three tributary valleys of the Loire River: the Creuse, Cher and Loir Valleys. These alluvial remnants were systematically dated by the Electron Spin Resonance (ESR) method applied on optically bleached quartz, in order to construct a chronostratigraphical framework for the fluvial systems and the associated archaeological localities. Four localities containing Early Palaeolithic industries with Mode 1 technology, occupied during the Lower Pleistocene, and ten sites characterized by assemblages with handaxes, discovered in the Middle Pleistocene alluvial formations, are described in this paper. These two sets of localities are characterized by lithic industries with many differences in supply of raw materials and in technical behaviours. The results indicate that this area was reached by two separate phases of human settlement (one in relation to Mode 1, the other to Mode 2) with an interval around 400ka, at the end of the Lower Pleistocene, during a period characterized by major climatic degradations.},
+	urldate = {2026-02-09},
+	journal = {Quaternary International},
+	author = {Despriée, Jackie and Voinchet, Pierre and Tissoux, Hélène and Moncel, Marie-Hélène and Arzarello, Marta and Robin, Sophie and Bahain, Jean-Jacques and Falguères, Christophe and Courcimault, Gilles and Dépont, Jean and Gageonnet, Robert and Marquer, Laurent and Messager, Erwan and Abdessadok, Salah and Puaud, Simon},
+	month = sep,
+	year = {2010},
+	pages = {345--359},
+	file = {ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\CQIUPCTA\\S1040618209002365.html:text/html},
+}
